Bug 168041 - Assertion when hovering over the Stylist in gtk4
Summary: Assertion when hovering over the Stylist in gtk4
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: GTK4
  Show dependency treegraph
 
Reported: 2025-08-21 14:33 UTC by Heiko Tietze
Modified: 2025-08-28 10:26 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2025-08-21 14:33:39 UTC
Start Writer, open the sidebar, select the Stylist, and move the mouse over some entries. 

The console shows:

soffice.bin: /home/ht/Sources/libreoffice/vcl/source/app/dbggui.cxx:36: void ImplDbgTestSolarMutex(bool): Assertion `ImplGetSVData()->mpDefInst->GetYieldMutex()->IsCurrentThread() && "SolarMutex not owned!"' failed.
Gtk-Message: 16:30:28.633: GtkDialog mapped without a transient parent. This is discouraged.

Does not happen for kf6/gen/gtk3.

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7d2b92d0e78751ac00d25dd312f7bc77abe96b4e
CPU threads: 32; OS: Linux 6.16; UI render: default; VCL: gtk4
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Michael Weghorn 2025-08-28 08:58:31 UTC
Pending fix: https://gerrit.libreoffice.org/c/core/+/190318
Comment 2 Commit Notification 2025-08-28 10:19:10 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b6cded6e887aa8e15496afb68bd3a4add4af7c12

tdf#168041 gtk: Hold SolarMutex when querying tree view tooltip

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.